# sphinx-pandera

./: .cruft.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/source/: conf.py  index.md  usage.md
docs/source/examples/: basic.md  check.md  index.md  with_index.md
sphinx_contrib/sphinx_pandera/: __init__.py  sphinx_pandera.py
sphinxcontrib/sphinx_pandera/: __init__.py  directives.py  documenters.py  inspection.py
tests/: __init__.py  conftest.py  test_basic.py  test_dummy.py
tests/symbols/: __init__.py  basic_non_pandera.py  check_schema.py
tests/test-docs/test-basic/: conf.py
